--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-   <header>
-      <nav>
+   <header class="nav-container">
+      <nav class="nav-main">
         <h1>DSViaCEP</h1>
-        <div>Contato</div>
+        <div class="contact-link">Contato</div>
       </nav>
+    </header>
       <main>
         <section id="form-section">
           <div>
@@ -58,6 +59,5 @@
         </section>
       </main>
 
-   </header>
 </body>
 </html>
