--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
               <input name="cidade" id="cidade" type="text" class="form-input" placeholder="Cidade" disabled>
             </div>
           </form>
-          <div>
-            <button type="submit">Salvar</button>
-            <button>Limpar</button>
+          <div class="btn-container">
+            <button type="submit" class="btn btn-left">Salvar</button>
+            <button class="btn btn-right">Limpar</button>
           </div>
 
         </div>
