--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 
         </div>
         </section>
-        <section id="list-section">
-          <div>
+        <section id="list-section" class="list-container">
+          <div class="card-list-item">
             <h3>São Paulo</h3>
-            <p>Rua dos jardins, 720</p>
-            <p>11200=345</p>
+            <p class="address-line">Rua dos jardins, 720</p>
+            <p class="address-cep">11200-345</p>
           </div>
-          <div>
+          <div class="card-list-item">
             <h3>São Paulo</h3>
             <p>Rua dos jardins, 720</p>
-            <p>11200=345</p>
+            <p>11200-345</p>
           </div>
         </section>
       </main>
