--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="form-control">
               <label for="cep">CEP: </label>
               <input name="cep" id="cep" type="text" class="form-input" placeholder="CEP">
-              <div class="error-message" data-error="cep">Campo requerido</div>
+              <div class="error-message" data-error="cep"></div>
             </div>
             <div class="form-control">
               <label for="street">Logradouro: </label>
@@ -33,7 +33,7 @@
             <div class="form-control">
               <label for="number">Número: </label>
               <input name="number" id="number" type="text" class="form-input" placeholder="Número">
-              <div class="error-message" data-error="number">Campo requerido</div>
+              <div class="error-message" data-error="number"></div>
             </div>
             <div class="form-control">
               <label for="city">Cidade: </label>
