Implementação do modal

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       </div>
     </section>
   </main>
+  <section id="modal-contact" class="modal-container active">
+    <div class="modal-box">
+      <div class="modal-content">
+        <p>@luanworth</p>
+      </div>
+      <button class="btn">Fechar</button>
+    </div>
+  </section>
+
   <script type="module" src="js/dsviacep.js"></script>
 </body>
 
