--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
     </section>
   </main>
-  <section id="modal-contact" class="modal-container active">
+  <section id="modal-contact" class="modal-container">
     <div class="modal-box">
       <div class="modal-content">
         <p>@luanworth</p>
       </div>
-      <button class="btn">Fechar</button>
+      <button id="modal-contact-close" class="btn">Fechar</button>
     </div>
   </section>
 
